Preparing for v1.5
- Removed some unused controllers
- Allow writes (except for deletes)
- Clear database daily
